Updated homepage with PaperProgress Android

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ public class GuessingNumberGame {
 						</li>
 
 						<p class="lead">
-							Some screenshots of SimplePlayer, my latest and greatest project
+							Some screenshots of SimplePlayer, my biggest project so far.
 						</p>
 						<!-- YOUTUBE EMBED
 						<li>
@@ -481,7 +481,7 @@ public class GuessingNumberGame {
 
 						</li>
 						<p class=lead>
-							Paper Progress - a quick side project to quickly display progress through an exam paper
+							Paper Progress - a quick side project that became my first android app.
 						</p>
 						<li>
 							<figure>
@@ -494,6 +494,28 @@ public class GuessingNumberGame {
 									</figcaption>
 								</figure>
 							</li>
+							<li>
+								<figure>
+										<div>
+											<img src="img/PP1.png"  height="500px" alt="Caper Progress">
+										</div>
+										<figcaption>
+											<h3>Paper Progress</h3>
+											<a href="https://github.com/jmcnicholas62743/PaperProgressAndroid">Take a look</a>
+										</figcaption>
+									</figure>
+								</li>
+								<li>
+									<figure>
+											<div>
+												<img src="img/PP2.png" height="500px" alt="Caper Progress">
+											</div>
+											<figcaption>
+												<h3>Paper Progress</h3>
+												<a href="https://github.com/jmcnicholas62743/PaperProgressAndroid">Take a look</a>
+											</figcaption>
+										</figure>
+									</li>
 					</ul>
 				</div>
 			</div>
